--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,92 +1,116 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: "Source Sans Pro", sans-serif;
+    /* background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("https://wallpapershome.com/images/wallpapers/switzerland-3840x2160-4k-5k-wallpaper-alps-mountains-stars-night-5713.jpg");
+    -webkit-background-size: cover;
+    background-size: cover;
+    background-position: center center; */
     background-color: #151728;
+    position: relative;
+    height: 160vh;
     color: #ccc8db;
+    width: 1100px;
     text-align: center;
     margin: auto;
 }
 
+
 /*------------Header CSS------------*/
+
+header {
+    height: 10vh;
+}
+
 #logo {
-    width: 400px;
+    width: 200px;
+    height: auto;
 }
 
-#currentDay {
-    float: left;
+.date {
+    /* border: 1px solid #272a3a; */
 }
 
-#currentHour {
-    float: right;
-}
 
-.time-date {
-    font-weight: bolder;
-    font-size: 15px;
-    color: #ffff;
-}
-
-hr {
-    border: 1px solid #272a3a;
-}
 
 /*------------Main CSS------------*/
+
 section {
+    background-color: #151728;
     border: 1px solid #272a3a;
+    height: 50vh;
 }
 
 .title {
-    background-color: #337ffe;
+    background-color: #151728;
     border: 1px solid #272a3a;
-    font-weight: bolder;
-    font-kerning: normal;
-    text-align: left;
-    color: white;
-    text-transform: uppercase;
-    padding: 10px 0px 10px 15px;
+    /* height: 5vh; */
 }
 
-/*------------Covid CSS------------*/
-.corona {
-    background: url("https://media.giphy.com/media/XbgLOfTPqp0MUc6yYH/giphy.gif");
-    background-position: 7% center;
-    background-repeat: no-repeat;
-    background-color: #00081E;
+/*------------Original CSS------------*/
+
+/* .wrapper {
+    width: 1170px;
+    margin: auto;
 }
 
-.covid-data {
+.nav-area {
     float: right;
-    background-color: #00081E;
-    border: 1px solid #272a3a;
-    border-radius: 5px;
-    width: 375px;
+    list-style: none;
+    margin-top: 30px;
 }
 
-tr {
-    background-color: white;
+.nav-area li {
+    display: inline-block;
 }
 
-/*------------News CSS------------*/
-.mainArticleDesc {
-    background-color: #272a3a;
+.nav-area li a {
+    color: #fff;
+    text-decoration: none;
+    padding: 5px 20px;
+    font-size: 14px;
 }
 
-.mainArticleLink {
-    background-color: #337ffe;
-    color: white;
-    font-weight: bold;
-    padding: 18px;
+.nav-area li a:hover {
+    background: #fff;
+    color: #333;
 }
 
-.mainArticleImg {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    background-color: #337ffe;
+.welcome-text {
+    position: absolute;
+    width: 600px;
+    height: 300px;
+    margin: 20% 30%;
+    text-align: center;
 }
 
-.listArticleImg {
-    width: 20%;
-    height: 100%;
-    object-fit: contain;
-    background-color: #337ffe;
+.welcome-text h1 {
+    text-align: center;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 35px;
 }
+
+.welcome-text h3 {
+    text-align: center;
+    color: #fff;
+}
+
+.welcome-text a {
+    border: 1px solid #fff;
+    padding: 10px 25px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 14px;
+    margin-top: 20px;
+    display: inline-block;
+    color: #fff;
+}
+
+.welcome-text a:hover {
+    background: #fff;
+    color: #333;
+} */
