--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: "Source Sans Pro", sans-serif;
-    background-color: #00081E;
+    background-color: #151728;
     color: #ccc8db;
     text-align: center;
     margin: auto;
@@ -26,28 +26,17 @@ body {
 }
 
 hr {
-    border: 1px solid #337ffe;
-}
-
-.nav {
-    justify-content: center;
-    border: 1px solid #337ffe;
-    background-color: #00081E;
-}
-
-.navbar-toggler {
-    position: relative;
-    left: 25%;
+    border: 1px solid #272a3a;
 }
 
 /*------------Main CSS------------*/
 section {
-    border: 1px solid #337ffe;
+    border: 1px solid #272a3a;
 }
 
 .title {
     background-color: #337ffe;
-    border: 1px solid #337ffe;
+    border: 1px solid #272a3a;
     font-weight: bolder;
     font-kerning: normal;
     text-align: left;
@@ -58,99 +47,33 @@ section {
 
 /*------------Covid CSS------------*/
 .corona {
+    background: url("https://media.giphy.com/media/XbgLOfTPqp0MUc6yYH/giphy.gif");
+    background-position: 7% center;
+    background-repeat: no-repeat;
     background-color: #00081E;
-}
-
-#cora {
-    background-color: white;
-    width: 100%;
-    object-position: center;
-    object-fit: contain;
-    border: 1px solid #272a3a;
 }
 
 .covid-data {
-    background-color: #ffff;
-    border: 1px solid #272a3a;
-}
-
-h2 {
-    color: #337ffe;
-    font-weight: bolder;
-    font-size: 25px;
-}
-
-.covidDataType {
-    color: #337ffe;
-    font-weight: bolder;
-    font-kerning: normal;
-    text-transform: uppercase;
-}
-
-/*------------Weather CSS------------*/
-.wea {
+    float: right;
     background-color: #00081E;
-}
-
-.searchbox {
-    width: 100%;
-}
-
-.wea-data {
-    background-color: #ffff;
     border: 1px solid #272a3a;
-    width: inherit;
+    border-radius: 5px;
+    width: 375px;
 }
 
-.allcity-data {
-    color: black;
-}
-
-.location {
-    font-weight: bolder;
-    padding: 10px 5px 10px 5px;
-}
-
-.city {
-    color: #337ffe;
-    font-size: 25px;
-    font-weight: bolder;
-    font-kerning: normal;
-    text-transform: uppercase;
-}
-
-.current {
-    color: #ffff;
-    background-color: #337ffe;
-}
-
-.temp {
-    font-size: 50px;
-    font-weight: bolder;
-    font-kerning: normal;
-    text-transform: uppercase;
-}
-
-.weather {
-    font-size: 20px;
-    font-kerning: normal;
-}
-
-/*------------Spotify CSS------------*/
-.spotify {
-    border: 1px solid #337ffe;
-    width: 340px;
-    height: 375px;
+tr {
+    background-color: white;
 }
 
 /*------------News CSS------------*/
-.articles {
-    background-color: #00081E;
+.mainArticleDesc {
+    background-color: #272a3a;
 }
 
 .mainArticleLink {
-    background-color: #ffff;
-    color: #00081E;
+    background-color: #337ffe;
+    color: white;
+    font-weight: bold;
     padding: 18px;
 }
 
@@ -158,53 +81,12 @@ h2 {
     width: 100%;
     height: 100%;
     object-fit: contain;
-}
-
-.listArticleDesc {
-    border: 1px solid #337ffe;
-    font-size: 12px;
-    background-color: #ffff;
-
+    background-color: #337ffe;
 }
 
 .listArticleImg {
-    width: 100%;
+    width: 20%;
     height: 100%;
-    float: left;
     object-fit: contain;
-}
-
-/*------------Travel CSS------------*/
-#skylogo {
-    width: 200px;
-}
-
-.skyscan {
-    background-color: #00081E;
-}
-
-.form {
-    background-color: #ffff;
-}
-
-/*------------Google Maps API------------*/
-.google {
-    background-color: #00081E;
-}
-
-.goobox {
-    background-color: white;
-}
-
-#gooheader {
-    width: 40%;
-    object-fit: contain;
-}
-
-.mapbox {
-    background-color: white;
-}
-
-#map {
-    height: 542px;
+    background-color: #337ffe;
 }
